# kopuz

./: .bazelrc  .gitattributes  .gitignore  BLITZ-SPIKE-NOTES.md  BUILD.bazel  Cargo.toml  Dioxus.toml  Justfile  MODULE.bazel  README-TR.md  README.md  flake.nix  install.sh  package-lock.json  tailwind.config.js  tailwind.css
crates/amuse-api/: Cargo.toml
crates/amuse-api/src/: lib.rs
crates/components/: BUILD.bazel  Cargo.toml
crates/components/src/: album_details.rs  bottombar.rs  compact_player.rs  folder_detail.rs  folder_picker.rs  fullscreen.rs  header.rs  lib.rs  lyrics_view.rs  metadata_modal.rs  navigation_controller.rs  player_controls.rs  playlist_detail.rs  playlist_modal.rs  progress_sync.rs  queue_drag.rs  queue_list_view.rs  quick_search.rs  rightbar.rs  search_genre_detail.rs  search_results.rs  settings_items.rs  settings_popups.rs  shared.rs  showcase.rs  slider_overlay.rs  sort_control.rs  source_switcher.rs  spotify_devices.rs  titlebar.rs  track_list_view.rs  track_row.rs  virtual_scroll.rs  window_chrome.rs  window_host.rs
crates/components/src/fullscreen/: android.rs  controls.rs  desktop.rs  metadata.rs  mod.rs
crates/components/src/modern/: bottombar.rs  showcase.rs  sidebar.rs
crates/components/src/normal/: bottombar.rs  showcase.rs  sidebar.rs
crates/components/src/vaxry/: bottombar.rs  sidebar.rs
crates/components/tests/: test_support.rs  ui_integration.rs
crates/db/: BUILD.bazel  Cargo.toml
crates/db/.sqlx/: query-009236f0f18f790edeb499f64f1c27ada2be9d5d374b970f0f63c7501a248f22.json  query-118dfaf246672c3a5f397612b23e8f2464dfc85b02f4e9f67dd99d7887f28617.json  query-1ac9a716621b27604b8184cd120a1972f45f36d54a48aa2d49811d241037bd09.json  query-1ec31a6b74109f31893556771b699e0ffede2b8bc3f73077ffddc56b44380ce1.json  query-2cf62186bdf3264ddd0865db62c300135fc0909f7de50b9ce1374a38661955e4.json  query-3071b15e96dea1927572b62a84eb737fa52ed24b0e37a95c6b9e2992f8df30c0.json  query-3dd2dba7d094e8debd51c3ae7929a84e82160a3e8593dd439ce882870a41ba9e.json  query-46d32ec17fefaa44e89c325e06b60bb2905d36e4a11562662f0456bf5c1b123a.json  query-4ce3cabfe77cc5008f2ab553e46d9d151924b286034a0c7935fa7652a6db0b00.json  query-56d17cf58e19e400643caeafa0a9da214685a172f082b8e7c0809d2cac59990b.json  query-56f7685bfee15e5d494188ab7025cb66043fd398aa8082bc01dfc786b1b49dfa.json  query-5d226623a6b711d5299008d95bf5178f5c588fd791257eb70e3c966b7eacd8fb.json  query-5e0e6d9a2b1c53aa15f8630f9b3da8727227da0d4a5c36b048196a0b7206df59.json  query-6b1148aff21ec5073278ccc0052ccbcbe8f0367b7290603c485fbfe8249ee9b0.json  query-76c4eb4bff17dc5c1809431dd8301cfe1433590db3a1e838b8c3eb837ebe04cd.json  query-802ae6605b0c689567b27c6c2875ddd6d201e79d62525a9d5770cd20b4bd29fb.json  query-8c861eddebc1952c35ba1a36ff6218ed8cade7ef8c88d31669dcdb88a1ffac2d.json  query-8ef86e80aa4b34cf4d1f09e3661c6a6a3ffd24c9084dda088a74c9823dea78a8.json  query-90ee67e9a6107997c02cbd9178bc18168a1cfb75f7f13d435e8c411be52b93ac.json  query-9c5b68c164107cce719afce5bb20ad2e232576a4044d5c48ca9ecb549b8cf3e3.json  query-9f9cc3cc4e6d499311fbf92ad9deb4e3af9053817acba8303409039f8c675cfb.json  query-a7a672b3b49c490c5ebe99de3d94195aad41739160739f55b87b21ffecd7346d.json  query-b8e72e4ab0f2087e63b4939684ee694896a753e602aa610182099debc019e79d.json  query-b9ca1e9a560a908e745b04df25c54c73b8d75b82c6903eaa04dc3db0b6db9958.json  query-edb3448e690445bafe40d2d3367e8067a7d44f501c2c704b1de8dc2f032c08bf.json  query-f5471590babc7e37e9d1e3b7484c58402c5ae576e1df3391715f6949f06e4904.json  query-f792bb29795d23546224d4c0b3bf4ff85dbd718e83792b0a0ffe3dbc24cc0f3e.json
crates/db/src/: lib.rs
crates/db/src/backend/: cfg_store.rs  migrations.rs  mod.rs  queries.rs  rows.rs  scrobble_queue.rs  stub.rs  writes.rs
crates/db/tests/: config.rs  favorites.rs  import.rs  persistence.rs  queries.rs  typed_queries.rs  writes.rs
crates/hooks/: BUILD.bazel  Cargo.toml
crates/hooks/src/: db_reactivity.rs  favorites.rs  lib.rs  now_playing_api.rs  playback_ref.rs  player_controller_queue.rs  scrobble_scheduler.rs  source_switch.rs  toast.rs  use_db_queries.rs  use_library_items.rs  use_player_controller.rs  use_player_task.rs  use_search_data.rs  use_sync_task.rs
crates/i18n/: BUILD.bazel  Cargo.toml  build.rs
crates/i18n/locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fil.ftl  fr.ftl  gr.ftl  he.ftl  hu.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  ml.ftl  nl.ftl  pl.ftl  pt-BR.ftl  pt-PT.ftl  ro.ftl  ru.ftl  sv.ftl  ta.ftl  tok-SP.ftl  tok.ftl  tr.ftl  uk.ftl  vi-VN.ftl  zh-CN.ftl
crates/i18n/src/: lib.rs
crates/kopuz/: BUILD.bazel  Cargo.toml  build.rs
crates/kopuz/assets/: fontawesome.css  jetbrains-mono.css  main.css  tailwind.css  themes.css
crates/kopuz/src/: artwork_protocol.rs  chrome_trace.rs  desktop_shell.rs  logging.rs  main.rs  pot_minter.rs  queue_state.rs  updates.rs
crates/pages/: BUILD.bazel  Cargo.toml
crates/pages/src/: activity.rs  album.rs  artist.rs  favorites.rs  favorites_body.rs  home.rs  home_body.rs  lib.rs  library.rs  playlists.rs  radio.rs  search.rs  settings.rs  settings_actions.rs  spotify_page.rs  spotify_search.rs  spotify_settings.rs  theme_editor.rs  ytdlp.rs
crates/pages/src/local/: activity.rs  album.rs  artist.rs  favorites.rs  home.rs  library.rs  playlists.rs  search.rs
crates/pages/src/server/: activity.rs  album.rs  artist.rs  discover.rs  download_manager.rs  favorites.rs  home.rs  library.rs  mod.rs  playlists.rs  search.rs  subsonic_sync.rs
crates/server/: BUILD.bazel  Cargo.toml
crates/server/examples/: duration_probe.rs
crates/server/src/: client.rs  cover.rs  jellyfin.rs  lib.rs  provider.rs  server_ops.rs  soundcloud.rs  source.rs  subsonic.rs  sync.rs  tidal.rs
crates/server/src/applemusic/: api.rs  auth.rs  cdm.rs  cenc.rs  mod.rs  signin.rs  stream.rs
crates/server/src/cookies/: browser.rs  mod.rs  profile.rs  signin.rs  (+2 more)
crates/server/tests/: source.rs
crates/spotify/: Cargo.toml
crates/spotify/examples/: session_token_probe.rs  spirc_probe.rs
crates/spotify/src/: auth.rs  error.rs  lib.rs  pkce.rs  provider.rs  token_store.rs  types.rs  web_api.rs
crates/spotify/tests/: integration.rs
(+228 files in other folders)
