[workspace]
members = [
   "crates/kopuz",
   "crates/components",
   "crates/hooks",
   "crates/pages",
   "crates/player",
   "crates/reader",
   "crates/server",
   "crates/utils",
   "crates/config",
   "crates/db",
   "crates/kopuz_route",
   "crates/discord-presence",
   "crates/scrobble",
   "crates/i18n",
   "crates/radio",
]
resolver = "3"

[workspace.package]
version = "0.6.7"

# Steer code toward the tracing subscriber (see crates/kopuz/src/logging.rs).
# Inherited per-crate via `[lints] workspace = true`. Build scripts (cargo:
# directives), examples, and test diagnostics opt out with `#[expect(...)]`.
[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
dioxus = { version = "0.7.9", features = [] }
getrandom = { version = "0.4", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "BiquadFilterNode", "BiquadFilterType", "ChannelMergerNode", "ChannelSplitterNode", "GainNode", "HtmlAudioElement", "HtmlMediaElement", "MediaElementAudioSourceNode", "MediaError", "Window", "Storage"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros", "io-util"] }
async-recursion = "1.0"
discord-rich-presence = "1.1.0"
lofty = "0.24.0"
# =0.25.6: blitz-dom (dioxus-native) pins image exactly; resolver needs one version.
image = { version = "=0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = "0.17.2"
percent-encoding = "2.3.2"
dotenvy = "0.15"
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
cpal = "0.17"
symphonia = { version = "0.6", features = ["all"] }
rb = "0.4"
jellyfin-sdk-rust = "0.1.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "charset", "query", "form"] }
rand = "0.10"
web-time = "1.1"
gloo-timers = { version = "0.4", features = ["futures"] }
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
ctrlc = "3.5"
i18n = { path = "./crates/i18n" }
player = { path = "./crates/player" }
reader = { path = "./crates/reader" }
components = { path = "./crates/components" }
hooks = { path = "./crates/hooks" }
pages = { path = "./crates/pages" }
utils = { path = "./crates/utils" }
config = { path = "./crates/config" }
db = { path = "./crates/db" }
kopuz = { path = "./crates/kopuz" }
server = { path = "./crates/server" }
kopuz_route = { path = "./crates/kopuz_route" }
discord-presence = { path = "./crates/discord-presence" }
scrobble = { path = "./crates/scrobble" }
radio = { path = "./crates/radio" }

[profile.release]
strip = "symbols"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
opt-level = 1

# Release profile for shipping .aab / .apk. Thin LTO keeps link time sane on CI.
[profile.android-release]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

# Engine fixes for the native (blitz) renderer, pinned to the exact crate
# versions blitz depends on so the patches apply. Each branch is on a UMCEKO
# fork; the upstream PRs are linked from the blitz-spike PR.
#   taffy: =0.11.0-experimental-cache-fix.3 (the 0.11.0 release dropped APIs
#          stylo_taffy uses, so the patch must carry that exact prerelease)
#   stylo / stylo_atoms: 0.18.0 (servo main has drifted — these branches are
#          the published-0.18.0 tree + the pointer/hover + scrollbar changes)
[patch.crates-io]
taffy = { git = "https://github.com/UMCEKO/taffy", branch = "spike/cache-fix-3" }
stylo = { git = "https://github.com/UMCEKO/stylo", branch = "spike/style-0.18" }
stylo_atoms = { git = "https://github.com/UMCEKO/stylo", branch = "spike/atoms-0.18" }
wgpu_context = { git = "https://github.com/UMCEKO/anyrender", branch = "fix/drop-surface-output-before-reconfigure" }
