[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.95.0"
description = "A modern, lightweight music player built with Rust and Dioxus."
license = "MIT"
repository = "https://github.com/Kopuz-org/kopuz"
homepage = "https://github.com/Kopuz-org/kopuz"
keywords = ["music", "player", "audio", "dioxus"]

[workspace.dependencies]
dioxus = { version = "0.7.9", features = [] }
# Native (Blitz/wgpu) renderer + its window-host API, pinned by rev to the
# Kopuz-org fork. Crates add their own features.
dioxus-native = { git = "https://github.com/Kopuz-org/kopuz-blitz", rev = "3b8f6ae7303e585377d1a621c5a278a30ea2125e", package = "dioxus-native", default-features = false }
blitz-traits = { git = "https://github.com/Kopuz-org/kopuz-blitz", rev = "3b8f6ae7303e585377d1a621c5a278a30ea2125e" }
winit = "=0.31.0-beta.2"
# complex-scripts: dictionary-based CJK line-breaking in blitz's parley.
parley = { version = "0.10", default-features = false, features = ["complex-scripts"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "BiquadFilterNode",
  "BiquadFilterType",
  "ChannelMergerNode",
  "ChannelSplitterNode",
  "GainNode",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "MediaElementAudioSourceNode",
  "MediaError",
  "Window",
  "Storage",
] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
  "rt",
  "time",
  "sync",
  "macros",
  "io-util",
] }
async-recursion = "1.0"
discord-rich-presence = "1.1.0"
lofty = "0.24.0"
# Pinned exact: blitz-dom (dioxus-native) requires image =0.25.6, so the
# resolver needs every consumer to agree on that one version.
image = { version = "=0.25.6", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
rfd = "0.17.2"
percent-encoding = "2.3.2"
dotenvy = "0.15"
http = "1.4.0"
uuid = { version = "1.20.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "js",
] }
cpal = "0.17"
symphonia = { version = "0.6", features = ["all"] }
rb = "0.4"
jellyfin-sdk-rust = "0.1.2"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "http2",
  "charset",
  "query",
  "form",
] }
rand = "0.10"
web-time = "1.1"
gloo-timers = { version = "0.4", features = ["futures"] }
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
tracing-appender = "0.2"
ctrlc = "3.5"
webbrowser = "1.2.1"
base64 = "0.22"
aes-gcm = "0.10"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false }
arc-swap = "1.7"
fluent-bundle = "0.16"
unic-langid = "0.9"
urlencoding = "2.1.3"
webkit2gtk = "2.0"
libloading = "0.8"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-media-player = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-avf-audio = "0.3.2"
block2 = "0.6"
windows = "0.62"
winres = "0.1"
symphonia-adapter-libopus = "0.3"
mpris-server = "0.10.0"
jni = "0.21"
ndk-context = "0.1"
thiserror = "2.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.30"
tempfile = "3.8.1"
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
httpdate = "1"
hex = "0.4"
rookie = "0.5"
color-thief = "0.2.2"
time = "0.3"

# Workspace components
i18n = { package = "kopuz-i18n", version = "0.8.0", path = "./crates/i18n" }
player = { package = "kopuz-player", version = "0.8.0", path = "./crates/player" }
reader = { package = "kopuz-reader", version = "0.8.0", path = "./crates/reader" }
components = { package = "kopuz-components", version = "0.8.0", path = "./crates/components" }
hooks = { package = "kopuz-hooks", version = "0.8.0", path = "./crates/hooks" }
pages = { package = "kopuz-pages", version = "0.8.0", path = "./crates/pages" }
utils = { package = "kopuz-utils", version = "0.8.0", path = "./crates/utils" }
config = { package = "kopuz-config", version = "0.8.0", path = "./crates/config" }
db = { package = "kopuz-db", version = "0.8.0", path = "./crates/db" }
kopuz = { version = "0.8.0", path = "./crates/kopuz" }
server = { package = "kopuz-server", version = "0.8.0", path = "./crates/server" }
kopuz_route = { package = "kopuz-route", version = "0.8.0", path = "./crates/kopuz_route" }
discord-presence = { package = "kopuz-discord-presence", version = "0.8.0", path = "./crates/discord-presence" }
scrobble = { package = "kopuz-scrobble", version = "0.8.0", path = "./crates/scrobble" }
radio = { package = "kopuz-radio", version = "0.8.0", path = "./crates/radio" }

# Steer code toward the tracing subscriber (see crates/kopuz/src/logging.rs).
# Inherited per-crate via `[lints] workspace = true`. Build scripts (cargo:
# directives), examples, and test diagnostics opt out with `#[expect(...)]`.
[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

[profile.release]
strip = "symbols"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
opt-level = 1

# Release profile for shipping .aab / .apk. Thin LTO keeps link time sane on CI.
[profile.android-release]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

# Engine fixes for the native (Blitz) renderer, pinned by rev to the Kopuz-org
# forks so the build is reproducible and the team can iterate without waiting on
# upstream. Each rev is the HEAD of the working branch on its fork; the upstream
# PRs are linked from the blitz-phoenix PR.
#   taffy:        kopuz-taffy  @ spike/cache-fix-3   (0.11.0-experimental-cache-fix.3;
#                 the 0.11.0 release dropped APIs stylo_taffy needs)
#   stylo:        kopuz-stylo  @ spike/style-0.18    (0.18.0)
#   stylo_atoms:  kopuz-stylo  @ spike/atoms-0.18    (0.18.0)
#   wgpu_context: kopuz-anyrender @ fix/drop-surface-output-before-reconfigure
[patch.crates-io]
taffy = { git = "https://github.com/Kopuz-org/kopuz-taffy", rev = "edc3932b567dc5e3f0417fbe6041670418104294" }
stylo = { git = "https://github.com/Kopuz-org/kopuz-stylo", rev = "701ae9c8a28cd8da50970ff214ad986e689b2846" }
stylo_atoms = { git = "https://github.com/Kopuz-org/kopuz-stylo", rev = "96224381a814e4267ac7cab3f33a9827597b8f68" }
wgpu_context = { git = "https://github.com/Kopuz-org/kopuz-anyrender", rev = "7af1a51e998ecb4a4b479fe29d707bbabe5ef9ac" }
