[package]
name = "kopuz-amuse-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "amuse_api"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utils.workspace = true
reader.workspace = true
axum.workspace = true
tower-http.workspace = true
tower.workspace = true
