[package]
name = "pages"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

# rfd is only used by the yt-dlp page, which is desktop/web only (excluded on Android).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = { workspace = true }

# Spotify integration is desktop-only (loopback OAuth listener, keyring, reqwest).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies.spotify]
workspace = true
features = ["spotify-web-playback"]

[dependencies]
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
components = { workspace = true }
hooks = { workspace = true }
config = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
server = { workspace = true }
radio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
i18n = { workspace = true }
lofty.workspace = true
tracing = { workspace = true }
