[package]
name = "server"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
directories = { workspace = true }
jellyfin-sdk-rust = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
md5 = "0.8"
sha1 = "0.10"
httpdate = "1"
hex = "0.4"
rookie = "0.5"
web-time = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "rt-multi-thread", "sync"] }
reader = { workspace = true }
db = { workspace = true }
utils = { workspace = true }
async-trait = "0.1"
librespot-core = { workspace = true }
librespot-oauth = { workspace = true }
librespot-metadata = { workspace = true }
librespot-audio = { workspace = true }
librespot-protocol = { workspace = true }
protobuf = { workspace = true }
futures-util = { workspace = true }

[[example]]
name = "duration_probe"
path = "examples/duration_probe.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
